# sapy_analyze

./: README.md  pyproject.toml  sapy_scores.py  setup.py
src/sapy_scores_simplerApps-Software-Solutions-Ltd/: __init__.py  sapy_scores.py
tests/: test_sapy_scores.py
